--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "joi": "^17.2.1",
-    "mongooo": "^1.1.4"
+    "mongooo": "^1.1.4",
+    "multer": "^1.4.2"
   },
   "scripts": {
     "dev": "node index.js"
