--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "express": "^4.17.1",
     "joi": "^17.2.1",
     "mongooo": "^1.1.4",
-    "multer": "^1.4.2"
+    "multer": "^1.4.2",
+    "xlsx": "^0.16.9"
   },
   "scripts": {
     "dev": "node index.js"
