--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "author": "dev-zam <zamsyh.work@gmail.com>",
   "license": "MIT",
   "dependencies": {
+    "convert-excel-to-json": "^1.7.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
