--- a/package.json
+++ b/package.json
@@ -7,10 +7,12 @@
   "author": "dev-zam <zamsyh.work@gmail.com>",
   "license": "MIT",
   "dependencies": {
+    "body-parser": "^1.19.0",
     "convert-excel-to-json": "^1.7.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-fileupload": "^1.2.0",
     "joi": "^17.2.1",
     "mongooo": "^1.1.4",
     "multer": "^1.4.2",
